--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -15,7 +15,7 @@
 }
 .topic-post > article {
   padding-left: 10px;
-  margin-right: 320px;
+  margin-right: 100px;
   min-width: 712px;
 }
 @media (max-width: 1124px) {
@@ -24,7 +24,7 @@
   }
 }
 .topic-status-info {
-  max-width: 789px;
+  max-width: 820px;
 }
 .topic-list > tbody,
 .category-list tbody tr:first-of-type {
